frontend/tests/cases/positive/polymorphism/implicitKind2.gr
data Fix (f : Type -> Type) = Fix (f (Fix f))

unfix : forall {f} . Fix f -> f (Fix f)
unfix (Fix x) = x
